--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -1,9 +1,18 @@
 helmfiles:
-- path: git::https://github.com/szymonrychu/helmfile-cluster-backbone.git@helmfile.yaml?ref={{ env "BACKBONE_REF" | default "master" }}
-- path: git::https://github.com/szymonrychu/helmfile-cluster-monitoring.git@helmfile.yaml?ref={{ env "MONITORING_REF" | default "master" }}
-- path: git::https://github.com/szymonrychu/helmfile-cluster-media.git@helmfile.yaml?ref={{ env "MEDIA_REF" | default "master" }}
-- path: git::https://github.com/szymonrychu/helmfile-cluster-home-automation.git@helmfile.yaml?ref={{ env "HOME_AUTOMATION_REF" | default "master" }}
-- path: git::https://github.com/szymonrychu/helmfile-cluster-blog.git@helmfile.yaml?ref={{ env "BLOG_REF" | default "master" }}
+- path: helmfiles/cicd/helmfile.yaml
+- path: helmfiles/backbone/helmfile.yaml
+- path: helmfiles/monitoring/helmfile.yaml
+- path: helmfiles/argo-cd/helmfile.yaml
+- path: helmfiles/authentication/helmfile.yaml
+- path: helmfiles/datascience/helmfile.yaml
+- path: helmfiles/coding/helmfile.yaml
+# - path: helmfiles/home-automation/helmfile.yaml
+- path: helmfiles/media/helmfile.yaml
+- path: helmfiles/blog/helmfile.yaml
 
 environments:
-  lab: {}
+  default: {}
+
+helmDefaults:
+  force: true
+  wait: true
