--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -17,7 +17,6 @@ prometheusOperator:
       cpu: 100m
       memory: 200Mi
 
-
 grafana:
   imageRenderer:
     enabled: true
@@ -31,7 +30,7 @@ grafana:
   securityContext:
     fsGroup: 1000
     runAsGroup: 1000
-    runAsNonRoot: true
+    runAsNonRoot: false
     runAsUser: 1000
   initChownData:
     enabled: true
@@ -56,13 +55,30 @@ grafana:
     accessModes:
       - ReadWriteOnce
     size: 2Gi
+  ingress:
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: nginx
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      kubernetes.io/tls-acme: "true"
+    hosts:
+      - grafana.szymonrichert.pl
+    path: /
+    tls:
+      - hosts:
+        - grafana.szymonrichert.pl
+        secretName: grafana-tls
   grafana.ini:
-    # auth:
-    #   disable_login_form: true
-    # "auth.anonymous":
-    #   enabled: true
-    #   org_name: Main Org.
-    #   org_role: Admin
+    auth:
+      oauth_auto_login: true
+    "auth.generic_oauth":
+      enabled: true
+      scopes: openid email profile
+      name: Keycloak
+      allow_sign_up: true
+      auth_url: https://auth.szymonrichert.pl/auth/realms/Lab/protocol/openid-connect/auth
+      token_url: https://auth.szymonrichert.pl/auth/realms/Lab/protocol/openid-connect/token
+      api_url: https://auth.szymonrichert.pl/auth/realms/Lab/protocol/openid-connect/userinfo
     server:
       root_url: https://grafana.szymonrichert.pl/
     smtp:
@@ -100,7 +116,7 @@ alertmanager:
 prometheus:
   prometheusSpec:
     ruleSelector: {}
-    # ruleNamespaceSelector: {}
+    ruleNamespaceSelector: {}
     ruleSelectorNilUsesHelmValues: false
     serviceMonitorSelector: {}
     serviceMonitorNamespaceSelector: {}
@@ -116,7 +132,7 @@ prometheus:
     retentionSize: 100GB
     resources:
       limits:
-        cpu: 1
+        cpu: "1"
         memory: 1500Mi
       requests:
         cpu: 100m
