Fix failing autupgrade pipeline if there is nothing to upgrade

--- a/.github/workflows/autoupgrade.yaml
+++ b/.github/workflows/autoupgrade.yaml
@@ -30,7 +30,4 @@ jobs:
         git config --global user.email "${BOT_EMAIL}"
         git config --global user.name "${BOT_USERNAME}"
 
-        git add -A
-        git commit -m "Daily autoupgrade external charts"
-
-        git push origin master
+        (git add -A && git commit -m "Daily autoupgrade external charts" && git push origin master) || true
