--- a/helmfiles/blog/values/wordpress/common.yaml
+++ b/helmfiles/blog/values/wordpress/common.yaml
@@ -33,6 +33,13 @@ containerSecurityContext:
   runAsUser: 1000
   runAsNonRoot: true
 
+resources:
+  limits:
+    memory: 1Gi
+    cpu: 500m
+  requests:
+    memory: 512Mi
+    cpu: 300m
 
 service:
   ## @param service.type WordPress service type
@@ -41,6 +48,13 @@ service:
 
 metrics:
   enabled: true
+  resources:
+    limits:
+      memory: 128Mi
+      cpu: 100m
+    requests:
+      memory: 128Mi
+      cpu: 100m
 
 persistence:
   enabled: true
@@ -58,3 +72,10 @@ mariadb:
     persistence:
       enabled: true
       existingClaim: wordpress-db-local-pv
+    resources:
+      limits:
+        memory: 512Mi
+        cpu: 500m
+      requests:
+        memory: 128Mi
+        cpu: 100m
