--- a/helmfiles/blog/values/wordpress/common.yaml
+++ b/helmfiles/blog/values/wordpress/common.yaml
@@ -31,6 +31,7 @@ podSecurityContext:
 containerSecurityContext:
   enabled: true
   runAsUser: 1000
+  runAsGroup: 1000
   runAsNonRoot: true
 
 resources:
