--- a/helmfiles/blog/values/wordpress/common.yaml
+++ b/helmfiles/blog/values/wordpress/common.yaml
@@ -26,10 +26,10 @@ ingress:
     kubernetes.io/tls-acme: "true"
 
 podSecurityContext:
-  enabled: true
+  enabled: false
   fsGroup: 1000
 containerSecurityContext:
-  enabled: true
+  enabled: false
   runAsUser: 1000
   runAsNonRoot: true
 
