--- a/helmfiles/blog/values/wordpress/common.yaml
+++ b/helmfiles/blog/values/wordpress/common.yaml
@@ -24,12 +24,14 @@ ingress:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
+    nginx.org/client-max-body-size: "100m"
 
 podSecurityContext:
-  enabled: false
+  enabled: true
   fsGroup: 1000
 containerSecurityContext:
-  enabled: false
+  enabled: true
   runAsUser: 1000
   runAsNonRoot: true
 
