--- a/helmfiles/authentication/helmfile.yaml
+++ b/helmfiles/authentication/helmfile.yaml
@@ -1,6 +1,6 @@
 repositories:
-- name: codecentric
-  url: https://codecentric.github.io/helm-charts
+- name: bitnami
+  url: https://charts.bitnami.com/bitnami
 templates:
   operators-default:
     disableValidation: true
@@ -33,8 +33,8 @@ releases:
 
 - name: keycloak
   timeout: 600
-  version: 18.3.0
-  chart: codecentric/keycloak
+  version: 12.0.0
+  chart: bitnami/keycloak
   namespace: keycloak
   labels:
     purpose: authentication
