--- a/helmfiles/backbone/helmfile.yaml
+++ b/helmfiles/backbone/helmfile.yaml
@@ -1,14 +1,14 @@
 repositories:
 - name: stable
   url: https://charts.helm.sh/stable
-- name: szymonrychu
-  url: https://raw.githubusercontent.com/szymonrychu/charts/master/
 - name: bitnami
   url: https://charts.bitnami.com/bitnami
 - name: jetstack
   url: https://charts.jetstack.io
 - name: ingress-nginx
   url: https://kubernetes.github.io/ingress-nginx
+- name: kubereboot
+  url: https://kubereboot.github.io/charts
 templates:
   operators-default:
     disableValidation: true
@@ -39,10 +39,28 @@ templates:
 
 releases:
 
+- name: kured
+  chart: kubereboot/kured
+  version: 4.1.0
+  namespace: kube-system
+  labels:
+    purpose: backbone
+    application: kured
+  <<: *default
+
+- name: local-path-provisioner
+  chart: szymonrychu/local-path-provisioner
+  namespace: rook-ceph
+  version: 1.0.0
+  labels:
+    purpose: storage
+    application: local-path-provisioner
+  <<: *default
+
 - name: metallb
   chart: bitnami/metallb
   namespace: ingress-system
-  version: 4.1.7
+  version: 3.0.6 # keep patch
   labels:
     purpose: backbone
     application: metallb
