--- a/helmfiles/home-automation/values/home-assistant/common.yaml
+++ b/helmfiles/home-automation/values/home-assistant/common.yaml
@@ -1,80 +1,311 @@
-env:
-  TZ: CET
+podSecurityContext:
+  fsGroup: 1000
+
+containerSecurityContext:
+  capabilities:
+    drop:
+    - ALL
+  enabled: true
+  runAsUser: 1000
+  runAsNonRoot: true
+
+initSecurityContext:
+  capabilities:
+    drop:
+    - ALL
+  enabled: true
+  runAsUser: 1000
+  runAsNonRoot: true
+
+ingress:
+  enabled: true
+  className: nginx
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: home-assistant.szymonrichert.pl
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls:
+    - secretName: home-assistant-tls
+      hosts:
+        - home-assistant.szymonrichert.pl
+
+resources:
+  limits:
+    cpu: 250m
+    memory: 768Mi
+  requests:
+    cpu: 10m
+    memory: 512Mi
+
+initResources:
+  limits:
+    cpu: 100m
+    memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
+
+persistence:
+  enabled: true
+  storageClass: ceph
+  accessMode: ReadWriteMany
+  size: 8Gi
+
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: "kubernetes.io/hostname"
+          operator: In
+          values:
+            - nuc1
+            - nuc2
+            - nuc3
+  podAntiAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+    - labelSelector:
+        matchExpressions:
+        - key: app.kubernetes.io/instance
+          operator: In
+          values:
+          - home-assistant-influxdb
+      topologyKey: "kubernetes.io/hostname"
+
+influxdb:
+  enabled: true
+  auth:
+    enabled: true
+    admin:
+      org: home-assistant
+      bucket: home-assistant
+  influxdb:
+    affinity: 
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+          - matchExpressions:
+            - key: "kubernetes.io/hostname"
+              operator: In
+              values:
+                - laptop1
+      podAntiAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+            - key: app.kubernetes.io/instance
+              operator: In
+              values:
+              - home-assistant-influxdb
+          topologyKey: "kubernetes.io/hostname"
+    podSecurityContext:
+      fsGroup: 1000
+    containerSecurityContext:
+      enabled: true
+      runAsUser: 1000
+      runAsNonRoot: true
+    resources:
+      requests:
+        memory: 256Mi
+        cpu: 10m
+      limits:
+        memory: 512Mi
+        cpu: 250m
+  persistence:
+    enabled: true
+    storageClass: local-path
+  volumePermissions:
+    enabled: true
+  ## @section Metrics parameters
+  ## Prometheus metrics
+  ## ref: https://docs.influxdata.com/influxdb/v1.7/administration/server_monitoring/#influxdb-metrics-http-endpoint
+  ##
+  metrics:
+    ## @param metrics.enabled Enable the export of Prometheus metrics
+    ##
+    enabled: false
+    service:
+      ## @param metrics.service.type Kubernetes service type (`ClusterIP`, `NodePort` or `LoadBalancer`)
+      ##
+      type: ClusterIP
+      ## @param metrics.service.port InfluxDB&trade; Prometheus port
+      ##
+      port: 9122
+      ## @param metrics.service.nodePort Kubernetes HTTP node port
+      ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
+      ##
+      nodePort: ""
+      ## @param metrics.service.loadBalancerIP loadBalancerIP if service type is `LoadBalancer`
+      ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#internal-load-balancer
+      ##
+      loadBalancerIP: ""
+      ## @param metrics.service.loadBalancerSourceRanges Address that are allowed when service is LoadBalancer
+      ## https://kubernetes.io/docs/tasks/access-application-cluster/configure-cloud-provider-firewall/#restrict-access-for-loadbalancer-service
+      ##
+      ## loadBalancerSourceRanges:
+      ## - 10.10.10.0/24
+      loadBalancerSourceRanges: []
+      ## @param metrics.service.clusterIP Static clusterIP or None for headless services
+      ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#choosing-your-own-ip-address
+      ## e.g:
+      ## clusterIP: None
+      ##
+      clusterIP: ""
+      ## @param metrics.service.annotations [object] Annotations for the Prometheus metrics service
+      ##
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "{{ .Values.metrics.service.port }}"
+        prometheus.io/path: "/metrics"
+      ## @param metrics.service.externalTrafficPolicy Service external traffic policy
+      ## ref http://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
+      ##
+      externalTrafficPolicy: Cluster
+      ## @param metrics.service.extraPorts Extra ports to expose (normally used with the `sidecar` value)
+      ##
+      extraPorts: []
+      ## @param metrics.service.sessionAffinity Session Affinity for Kubernetes service, can be "None" or "ClientIP"
+      ## If "ClientIP", consecutive client requests will be directed to the same mongos Pod
+      ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#virtual-ips-and-service-proxies
+      ##
+      sessionAffinity: None
+      ## @param metrics.service.sessionAffinityConfig Additional settings for the sessionAffinity
+      ## sessionAffinityConfig:
+      ##   clientIP:
+      ##     timeoutSeconds: 300
+      ##
+      sessionAffinityConfig: {}
+
+    ## Prometheus Operator ServiceMonitor configuration
+    ##
+    serviceMonitor:
+      ## @param metrics.serviceMonitor.enabled if `true`, creates a Prometheus Operator ServiceMonitor (also requires `metrics.enabled` to be `true`)
+      ##
+      enabled: false
+      ## @param metrics.serviceMonitor.namespace Namespace in which Prometheus is running
+      ## e.g:
+      ## namespace: monitoring
+      ##
+      namespace: ""
+      ## @param metrics.serviceMonitor.interval Interval at which metrics should be scraped.
+      ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#endpoint
+      ## e.g:
+      ## interval: 10s
+      ##
+      interval: ""
+      ## @param metrics.serviceMonitor.scrapeTimeout Timeout after which the scrape is ended
+      ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#endpoint
+      ## e.g:
+      ## scrapeTimeout: 10s
+      ##
+      scrapeTimeout: ""
+      ## @param metrics.serviceMonitor.relabelings RelabelConfigs to apply to samples before scraping
+      ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#relabelconfig
+      ##
+      relabelings: []
+      ## @param metrics.serviceMonitor.metricRelabelings MetricRelabelConfigs to apply to samples before ingestion
+      ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#relabelconfig
+      ##
+      metricRelabelings: []
+      ## @param metrics.serviceMonitor.selector Prometheus instance selector labels
+      ## ref: https://github.com/bitnami/charts/tree/main/bitnami/prometheus-operator#prometheus-configuration
+      ## e.g:
+      ## selector:
+      ##   prometheus: my-prometheus
+      ##
+      selector: {}
+      ## @param metrics.serviceMonitor.honorLabels honorLabels chooses the metric's labels on collisions with target labels
+      ##
+      honorLabels: false
 
 postgresql:
   enabled: true
-  postgresqlUsername: home-assistant
-  postgresqlPassword: home-assistant-pass
-  postgresqlDatabase: home-assistant
+  auth:
+    username: home-assistant
+    database: home-assistant
+  architecture: replication # standalone
   primary:
-    securityContext:
+    podSecurityContext:
       enabled: true
       fsGroup: 1000
     containerSecurityContext:
       enabled: true
       runAsUser: 1000
+      runAsNonRoot: true
+    podLabels:
+      application: postgresql-primary
     persistence:
       enabled: true
-      existingClaim: "postgresql-raid1-pvc"
-
-hostNetwork: true
-
-influxdb:
-  enabled: true
-  influxdb:
-    securityContext:
+      storageClass: local-path
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+          - matchExpressions:
+            - key: "kubernetes.io/hostname"
+              operator: In
+              values:
+                - nuc1
+                - nuc2
+                - nuc3
+      podAntiAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+            - key: application
+              operator: In
+              values:
+              - postgresql-primary
+          topologyKey: "kubernetes.io/hostname"
+    resources:
+      requests:
+        memory: 64Mi
+        cpu: 10m
+      limits:
+        memory: 256Mi
+        cpu: 100m
+  readReplicas:
+    replicaCount: 3
+    podSecurityContext:
       enabled: true
       fsGroup: 1000
+    containerSecurityContext:
+      enabled: true
       runAsUser: 1000
-  volumePermissions:
-    securityContext:
-      fsGroup: 1000
-      runAsUser: 1000
-  architecture: standalone
-  database: home_assistant
-  authEnabled: false
-  persistence:
-    enabled: true
-    existingClaim: "influxdb-raid1-pvc"
-
-metrics:
-  enabled: true
-  prometheusRule:
-    enabled: true
-  serviceMonitor:
-    bearerTokenSecret:
-      name: "home-assistant"
-      key: "BEARER_TOKEN"
-
-persistence:
-  config:
-    enabled: true
-    type: hostPath
-    mountPath: /config
-    hostPath: /k8s-data/raid1/home-assistant-config
-
-resources:
-  limits:
-    cpu: 250m
-    memory: 256Mi
-  requests:
-    cpu: 100m
-    memory: 128Mi
-
-ingress:
-  main:
-    enabled: true
-    annotations:
-      kubernetes.io/ingress.class: nginx
-      cert-manager.io/cluster-issuer: letsencrypt-prod
-      kubernetes.io/tls-acme: "true"
-    hosts:
-      - host: home-assistant.szymonrichert.pl
-        paths:
-          - path: /
-    tls:
-      - secretName: home-assistant-tls
-        hosts: 
-          - home-assistant.szymonrichert.pl
-        
-      
+      runAsNonRoot: true
+    podLabels:
+      application: postgresql-readonly
+    persistence:
+      enabled: true
+      storageClass: local-path
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+          - matchExpressions:
+            - key: "kubernetes.io/hostname"
+              operator: In
+              values:
+                - nuc1
+                - nuc2
+                - nuc3
+      podAntiAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+            - key: application
+              operator: In
+              values:
+              - postgresql-readonly
+          topologyKey: "kubernetes.io/hostname"
+    resources:
+      requests:
+        memory: 64Mi
+        cpu: 10m
+      limits:
+        memory: 256Mi
+        cpu: 100m
