--- a/helmfiles/media/values/qbittorrent/common.yaml
+++ b/helmfiles/media/values/qbittorrent/common.yaml
@@ -1,58 +1,34 @@
-image:
-  repository: docker.io/emby/embyserver
-  pullPolicy: IfNotPresent
-  tag: 4.7.0.12
-
 ingress:
   main:
     enabled: true
+    ingressClassName: "nginx"
     annotations:
-      kubernetes.io/ingress.class: nginx
       cert-manager.io/cluster-issuer: letsencrypt-prod
       kubernetes.io/tls-acme: "true"
     hosts:
-      - host: emby.szymonrichert.pl
+      - host: qbt.szymonrichert.pl
         paths:
           - path: /
             pathType: Prefix
     tls:
-      - secretName: emby-tls
+      - secretName: qbt-tls
         hosts:
-          - emby.szymonrichert.pl
+          - qbt.szymonrichert.pl
 
 podSecurityContext:
   fsGroup: 1000
-  # runAsGroup: 1000
+  runAsGroup: 1000
   # runAsNonRoot: true
-  # runAsUser: 1000
-
-env:
-  NVIDIA_VISIBLE_DEVICES: GPU-75e37533-e1a4-88d2-f573-dca6ce27d047
-
-metrics:
-  enabled: true
-
-hostNetwork: true
-
-resources:
-  requests:
-    cpu: 200m
-    memory: 256Mi
-  limits:
-    cpu: 4
-    memory: 4096Mi
+  runAsUser: 1000
 
 persistence:
   config:
     enabled: true
-    type: hostPath
+    storageClass: local-path
+    type: pvc
     mountPath: /config
-    hostPath: /k8s-data/raid1/emby-config
-  transcoding:
-    enabled: true
-    type: hostPath
-    mountPath: /config/transcoding-temp
-    hostPath: /k8s-data/emby-transcoding-temp
+    retain: true
+    size: 10Gi
   movies:
     enabled: true
     type: hostPath
@@ -68,3 +44,7 @@ persistence:
     type: hostPath
     mountPath: /media/music
     hostPath: /k8s-data/disk/music
+
+
+portal:
+  enabled: true
