--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -4,7 +4,7 @@ helmfiles:
 - path: helmfiles/monitoring/helmfile.yaml
 - path: helmfiles/authentication/helmfile.yaml
 # - path: helmfiles/datascience/helmfile.yaml
-# - path: helmfiles/coding/helmfile.yaml
+- path: helmfiles/coding/helmfile.yaml
 - path: helmfiles/home-automation/helmfile.yaml
 # - path: helmfiles/media/helmfile.yaml
 # - path: helmfiles/blog/helmfile.yaml
