--- a/helmfiles/backbone/helmfile.yaml
+++ b/helmfiles/backbone/helmfile.yaml
@@ -10,7 +10,7 @@ repositories:
 - name: kubereboot
   url: https://kubereboot.github.io/charts
 - name: szymonrychu
-  url: https://szymonrychu.github.io/charts/
+  url: https://szymonrychu.github.io/charts
 templates:
   operators-default:
     disableValidation: true
