--- a/helmfiles/home-automation/values/home-assistant/common.yaml
+++ b/helmfiles/home-automation/values/home-assistant/common.yaml
@@ -35,8 +35,8 @@ ingress:
 
 resources:
   limits:
-    cpu: 250m
-    memory: 768Mi
+    cpu: 500m
+    memory: 1Gi
   requests:
     cpu: 10m
     memory: 512Mi
