--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -310,3 +310,6 @@ kube-state-metrics:
             values:
             - keycloak
         topologyKey: "kubernetes.io/hostname"
+
+prometheus-node-exporter:
+  hostNetwork: false
