--- a/helmfiles/backbone/helmfile.yaml
+++ b/helmfiles/backbone/helmfile.yaml
@@ -80,9 +80,9 @@ releases:
 #   <<: *default
 
 - name: metallb
-  chart: bitnami/metallb
+  chart: szymonrychu/metallb
   namespace: ingress-system
-  version: 3.0.6 # keep patch
+  version: 3.0.12
   labels:
     purpose: backbone
     application: metallb
