--- a/helmfiles/home-automation/helmfile.yaml
+++ b/helmfiles/home-automation/helmfile.yaml
@@ -2,7 +2,7 @@ repositories:
 - name: bitnami
   url: https://charts.bitnami.com/bitnami
 - name: szymonrychu
-  url: https://raw.githubusercontent.com/szymonrychu/charts/master/
+  url: https://szymonrychu.github.io/charts
 environments:
   lab: {}
 templates:
